--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
+    "@prisma/client": "^4.11.0",
     "node-telegram-bot-api": "^0.61.0"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "prisma": "^4.11.0"
+  }
 }
